FullSb1-27-apr-15/src/objects/Rotation_Documents__c.object
<CustomObject>
    <description>Documents Required for Rotation</description>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_My_Details__c</fullName>
        <formula>if(isblank(Rotation1__c), Rotation2__r.Student__r.Mydetails_Rotation_Tab_Completed__c, Rotation1__r.Student__r.Mydetails_Rotation_Tab_Completed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed My Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_from_Visatrack_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record created from Visa Track or  portal</description>
        <label>Created from Visa Track/Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Relationship__c</fullName>
        <formula>text(Dependent__r.Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <referenceTo>Dependent__c</referenceTo>
        <relationshipLabel>Rotation Documents</relationshipLabel>
        <relationshipName>Rotation_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dont_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If MAster document is unique and not mergeable then make this field as true so that code will create a new record with same name.</description>
        <label>Dont Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXACT_Passport_Family_Name__c</fullName>
        <inlineHelpText>EXACTLY as it appears on Passport.</inlineHelpText>
        <label>EXACT Passport Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXACT_Passport_First_Name__c</fullName>
        <inlineHelpText>EXACTLY as it appears on passport.</inlineHelpText>
        <label>EXACT Passport First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXACT_Passport_Middle_Name__c</fullName>
        <inlineHelpText>EXACTLY as it appears on passport.</inlineHelpText>
        <label>EXACT Passport Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Elective_Startdate__c</fullName>
        <formula>if(isblank(Rotation1__c), 
 Rotation2__r.Earliest_Elective_Start_Date__c  , 
Rotation1__r.Earliest_Elective_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Elective Startdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>if(isblank( Rotation1__r.Student__r.Email ),Rotation2__r.Student__r.Email,Rotation1__r.Student__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Rotation1_available_to_portal__c</fullName>
        <description>For internal use created to check(logic for) docs to be displayed in portal for a particular rotation,</description>
        <formula>(Created_from_Visatrack_Portal__c 
&amp;&amp; 
or(Rotation1_VisaTrack__c = CASESAFEID(Rotation1__r.Visa_Track__c), Required_by_Current_Visa_Track_R1__c))

||

(
OR(Name==&apos;Passport Copy And Data&apos;,Name==&apos;Second Passport&apos;)
&amp;&amp; 
(IsBlank(Rotation1_VisaTrack__c) || and(NOT(IsBlank(Rotation1_VisaTrack__c)) &amp;&amp;  IsBlank( Rotation1__r.Visa_Track__c )))
&amp;&amp; 
NOT(IsBlank(Rotation1__c))
)</formula>
        <label>Rotation1 available in portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Rotation2_available_to_portal__c</fullName>
        <description>same as  For Rotation1 available to portal field</description>
        <formula>(Created_from_Visatrack_Portal__c
&amp;&amp;
or(Rotation2_VisaTrack__c = CASESAFEID(Rotation2__r.Visa_Track__c), Required_by_Current_Visa_Track_R2__c))

||

(
(Name==&apos;Passport Copy And Data&apos; || Name==&apos;Second Passport&apos;) 
&amp;&amp; 
(IsBlank(Rotation2_VisaTrack__c)||and(NOT(IsBlank(Rotation2_VisaTrack__c)) &amp;&amp; IsBlank( Rotation2__r.Visa_Track__c )))
&amp;&amp; 
NOT(IsBlank(Rotation2__c))
)</formula>
        <label>Rotation2 available in portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For__c</fullName>
        <description>This field answers, Rotation Document is for Student or for Dependent? if dependent which dependent?</description>
        <formula>IF(NOT(ISBLANK(Dependent__c)),&apos;Dependent : &apos;+ TEXT(Dependent__r.Relationship__c)+&apos; : &apos;+ Dependent__r.First_Name__c+Dependent__r.Last_Name__c   ,&apos;Student&apos;+(IF(NOT(ISBLANK( Rotation1__c )),&apos; : &apos;+ TEXT(Rotation1__r.Type__c ) ,&apos;&apos;) + IF(NOT(ISBLANK( Rotation2__c )),&apos; : &apos;+ TEXT(Rotation2__r.Type__c ) ,&apos;&apos;) ))</formula>
        <label>For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>if(isblank(Rotation1__c), 
Rotation2__r.Student__r.FirstName &amp; &quot; &quot; &amp; Rotation2__r.Student__r.LastName, 
Rotation1__r.Student__r.FirstName &amp; &quot; &quot; &amp; Rotation1__r.Student__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Campus__c</fullName>
        <formula>if(isblank(Rotation1__c), 
 Rotation2__r.Home_Campus__c , 
Rotation1__r.Home_Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverted_Rotations__c</fullName>
        <formula>if(text(Rotation1__r.Rotation_Number__c)=&quot;Rotation 2&quot;,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverted Rotations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orientation_Date__c</fullName>
        <formula>if(isblank(Rotation1__c), 
 Rotation2__r.Rotation_Orientation_Date__c , 
 Rotation1__r.Rotation_Orientation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date__c</fullName>
        <inlineHelpText>EXACTLY as it appears on passport.</inlineHelpText>
        <label>Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Issue_Date__c</fullName>
        <inlineHelpText>EXACTLY as it appears on passport.</inlineHelpText>
        <label>Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Type__c</fullName>
        <inlineHelpText>Select the passport category.</inlineHelpText>
        <label>Passport Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Passport_issued_country__c</fullName>
        <inlineHelpText>Enter the country that issued  passport.</inlineHelpText>
        <label>Passport issued by</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Rotation Documents</relationshipLabel>
        <relationshipName>Rotation_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>if(isblank(Rotation1__c), 
 Rotation2__r.Program__c, 
Rotation1__r.Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_by_Current_Visa_Track_R1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required by Current Visa Track-R1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_by_Current_Visa_Track_R2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required by Current Visa Track-R2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rotation1_Active__c</fullName>
        <formula>Rotation1__r.Active__c</formula>
        <inlineHelpText>Is Rotation1 Active?</inlineHelpText>
        <label>Rotation1 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rotation1_VisaTrack__c</fullName>
        <label>Rotation1 VisaTrack</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotation1__c</fullName>
        <label>Rotation 1</label>
        <referenceTo>Rotation__c</referenceTo>
        <relationshipLabel>Rotation1 Documents</relationshipLabel>
        <relationshipName>Rotation1_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rotation2_Active__c</fullName>
        <formula>Rotation2__r.Active__c</formula>
        <inlineHelpText>Is Rotation2 Active?</inlineHelpText>
        <label>Rotation2 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rotation2_VisaTrack__c</fullName>
        <label>Rotation2 VisaTrack</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotation2__c</fullName>
        <label>Rotation 2</label>
        <referenceTo>Rotation__c</referenceTo>
        <relationshipLabel>Rotation2 Documents</relationshipLabel>
        <relationshipName>Rotation_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rotation_1x_Active__c</fullName>
        <formula>if(Rotation1_Active__c = TRUE,  Rotation1__r.Name, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rotation 1 x Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotation_2_x_Active__c</fullName>
        <formula>if(Rotation2_Active__c = TRUE, Rotation2__r.Name, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rotation 2 x Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rotation_Name__c</fullName>
        <formula>if(and(not(isblank( Rotation_1x_Active__c )), isblank( Rotation_2_x_Active__c )), Rotation1__r.Clean_Rotation_Name__c, 
if(and(isblank(Rotation_1x_Active__c ), not(isblank(Rotation_2_x_Active__c ))),Rotation2__r.Clean_Rotation_Name__c, Rotation1__r.Clean_Rotation_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rotation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RotationsId__c</fullName>
        <description>used to check Dependent rotations and if dependents are not blank then use them in Unique field</description>
        <formula>IF(ISBLANK(Dependent__c),  IF(ISBLANK(Rotation1__c), &apos; &apos;, &apos; : &apos;+Rotation1__c) ,
IF( ISBLANK(  Dependent__r.Rotation1__c ) , &apos;&apos;, Dependent__r.Rotation1__c ) +&apos; : &apos;+ IF( ISBLANK(  Dependent__r.Rotation2__c ) , &apos;&apos;, Dependent__r.Rotation2__c ) )</formula>
        <label>RotationsId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEVIS_Number__c</fullName>
        <formula>if(isblank(Rotation1__c), 
Rotation2__r.SEVIS_Number__c, 
 Rotation1__r.SEVIS_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEVIS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Rotation_Name__c</fullName>
        <formula>if(and(not(isblank( Rotation_1x_Active__c )), isblank( Rotation_2_x_Active__c )), &quot;&quot;, 
if(and(isblank(Rotation_1x_Active__c ), not(isblank(Rotation_2_x_Active__c ))),&quot;&quot;, Rotation2__r.Clean_Rotation_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Rotation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentId__c</fullName>
        <formula>IF(NOT(IsBlank(Rotation1__c)), CASESAFEID(Rotation1__r.Student__c),IF(NOT(ISBlank(Rotation2__c)),CASESAFEID(Rotation2__r.Student__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StudentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <formula>if(isblank(Rotation1__r.Student_ID__c), Rotation2__r.Student_ID__c, Rotation1__r.Student_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_has_second_passport__c</fullName>
        <formula>IF(NOT(IsBlank(Rotation1__c)), Rotation1__r.Student__r.Have_second_Passport__c,IF(NOT(ISBlank(Rotation2__c)),Rotation2__r.Student__r.Have_second_Passport__c,False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student has second passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplied_Date__c</fullName>
        <label>Supplied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Sub_stage__c</fullName>
        <formula>if(and(not(isblank(Rotation1__c)), isblank(Rotation2__c)), text(Rotation1__r.Visa_SubStage__c) , 
if(and(isblank(Rotation1__c), not(isblank(Rotation2__c))),text(Rotation2__r.Visa_SubStage__c) , 
if(and(not(isblank(Rotation1__c)), not(isblank(Rotation2__c))),&quot;&quot;,
text(Rotation1__r.Visa_SubStage__c) &amp;&quot;&lt;-&gt;&quot;&amp;text(Rotation2__r.Visa_SubStage__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Sub-stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Track__c</fullName>
        <formula>if(and(not(isblank( Rotation_1x_Active__c )), isblank( Rotation_2_x_Active__c )),  Rotation1__r.Visa_Track__r.Name , 
if(and(isblank(Rotation_1x_Active__c ), not(isblank(Rotation_2_x_Active__c ))),Rotation2__r.Visa_Track__r.Name, 
if(Rotation1__r.Visa_Track__r.Name = Rotation2__r.Visa_Track__r.Name, Rotation1__r.Visa_Track__r.Name, 
if(isblank(Rotation1__r.Visa_Track__r.Name),Rotation2__r.Visa_Track__r.Name, if(isblank(Rotation2__r.Visa_Track__r.Name),Rotation1__r.Visa_Track__r.Name,
Rotation1__r.Visa_Track__r.Name &amp;&quot;&lt;-&gt;&quot;&amp;Rotation2__r.Visa_Track__r.Name)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visa Track</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived_Date__c</fullName>
        <label>Waived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waived_Reason__c</fullName>
        <label>Waived Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waived?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dep_ContactId__c</fullName>
        <formula>Dependent__r.Student__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dep:ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rot_ContactId__c</fullName>
        <description>Rotation Document -&gt; rotation -&gt; contact Id(used for internal purpose)</description>
        <formula>Rotation1__r.Student__c</formula>
        <inlineHelpText>Rotation Document -&gt; rotation -&gt; contact Id(used for internal purpose)</inlineHelpText>
        <label>rot:ContactId</label>
        <type>Text</type>
    </fields>
    <label>Rotation Documents</label>
    <nameField>
        <label>Rotation Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rotation Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Student_Rotation_Missmatch</fullName>
        <active>false</active>
        <errorConditionFormula>IF( AND(ISNULL(Rotation1__c),ISNULL(Rotation2__c)) , 
IF(  Rotation1__r.Student__c &lt;&gt; Rotation2__r.Student__c ,True,False)
, False)</errorConditionFormula>
        <errorMessage>Rotation1 Contact and  Rotation2 Contact are not equal.</errorMessage>
    </validationRules>
</CustomObject>